# Text2SQL-RAG

./: .gitignore  README.md  pyproject.toml
notebooks/: 01_basic_text_to_sql.ipynb  02_intermediate_text_to_sql.ipynb  03_advanced_text_to_sql.ipynb  04_postgresql_text_to_sql.ipynb  05_vanna_ai_text_to_sql_complete.ipynb
